# ats-codecount

./: .gitattributes  .gitignore  Makefile  README.md  TODO.md  atspkg.dhall  ci.dhall  dhall-ci.dhall  laptop.txt  mac.txt  pkg.dhall  shake.hs  toml-ci.dhall
.github/workflows/: ats.yml  dhall.yml  toml.yml
CATS/: stack.cats
DATS/: bytecount.dats  file.dats  io.dats  memchr.dats  pointer.dats  print.dats  wc.dats
DATS/lang/: assembly.dats  c.dats  common.dats  csv.dats  dhall.dats  egison.dats  futhark.dats  haskell.dats  idris.dats  j.dats  json.dats  python.dats  rust.dats  tex.dats  vimscript.dats
SATS/: bytecount.sats  io.sats  memchr.sats  pointer.sats  size.sats  stack.sats  wc.sats
SATS/lang/: assembly.sats  c.sats  common.sats  csv.sats  dhall.sats  egison.sats  futhark.sats  haskell.sats  idris.sats  j.sats  json.sats  python.sats  q.sats  rust.sats  tex.sats  vimscript.sats
bash/: bench  trimall
bench/: wc-bench.dats
bench/data/: fpsp.S
bytecount/: Cargo.toml
bytecount/.cargo/: config
bytecount/benches/: bytecount_bench.rs
bytecount/src/: lib.rs
src/: wc-demo.dats
test/: spec.dats  wc-bench.dats  wc-demo.dats
test/data/: Pathological.hs  Pathological.idr  aaa.q  instr.asm  multiline.dhall  pathological.S  pathological.c  pathological.py  pathological.rs  phash.ijs  schwarzschild.egi
