[package]
name = "bytecount_ffi"
version = "0.1.0"
authors = ["Vanessa McHale <vamchale@gmail.com>"]

[lib]
name = "bytecount_ffi"
crate-type = [ "staticlib", "cdylib" ]

[dev-dependencies]
criterion = "0.3"

[dependencies]
libc = "0.2"
memchr = "2.2"

[dependencies.bytecount]
features = ["runtime-dispatch-simd"]
version = "0.6"

[[bench]]
name = "bytecount_bench"
harness = false
